@@ -1,22 +1,5 @@
 package com.kagof.intellij.plugins.pokeprogress;
 
-import com.intellij.ui.scale.JBUIScale;
-import java.awt.BorderLayout;
-import java.awt.Dimension;
-import java.awt.GridLayout;
-import java.awt.event.ActionEvent;
-import java.lang.reflect.Field;
-import java.util.Objects;
-import java.util.Optional;
-
-import javax.swing.JButton;
-import javax.swing.JFrame;
-import javax.swing.JPanel;
-import javax.swing.JProgressBar;
-import javax.swing.SwingUtilities;
-import javax.swing.UIManager;
-import javax.swing.WindowConstants;
-
 import com.intellij.ide.ui.laf.darcula.DarculaLaf;
 import com.intellij.ide.ui.laf.darcula.ui.DarculaTextBorder;
 import com.intellij.mock.MockApplication;
@@ -26,6 +9,7 @@ import com.intellij.openapi.options.ConfigurationException;
 import com.intellij.openapi.ui.ComboBox;
 import com.intellij.openapi.ui.LabeledComponent;
 import com.intellij.ui.components.fields.IntegerField;
+import com.intellij.ui.scale.JBUIScale;
 import com.intellij.util.ReflectionUtil;
 import com.kagof.intellij.plugins.pokeprogress.configuration.PokemonProgressState;
 import com.kagof.intellij.plugins.pokeprogress.model.Pokemon;
@@ -33,14 +17,31 @@ import com.kagof.intellij.plugins.pokeprogress.theme.ColorScheme;
 import com.kagof.intellij.plugins.pokeprogress.theme.ColorSchemes;
 import com.kagof.intellij.plugins.pokeprogress.theme.PaintTheme;
 import com.kagof.intellij.plugins.pokeprogress.theme.PaintThemes;
+import java.awt.*;
+import java.awt.event.ActionEvent;
+import java.awt.event.WindowAdapter;
+import java.awt.event.WindowEvent;
+import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
+import java.util.Objects;
+import java.util.Optional;
+import javax.swing.JButton;
+import javax.swing.JFrame;
+import javax.swing.JPanel;
+import javax.swing.JProgressBar;
+import javax.swing.SwingUtilities;
+import javax.swing.UIManager;
+import org.junit.Assume;
+import org.junit.Test;
 
 /**
- * must add <code>--add-opens=java.desktop/java.awt=ALL-UNNAMED --add-opens=java.desktop/javax.swing=ALL-UNNAMED</code>
- * to JVM args. An IntelliJ run configuration exists for this in <code>.run/TestProgressBar.run.xml</code>, and a Gradle
- * task also exists as <code>./gradlew testProgressBar</code>.
+ * Used to find & adjust the best positioning of sprites.
+ * <p>
+ * Use the "Progress Bar Preview" or "Progress Bar Preview (dark mode)" run configuration.
  */
-public class TestProgressBar {
+public class ProgressBarPreview {
     private static final int MAX_SHIFT_VALUE = 900;
+    private static volatile boolean exited = false;
     private PokemonProgressState state;
 
     private JFrame frame;
@@ -54,18 +55,17 @@ public class TestProgressBar {
     private int originalYShift = 0;
     private int originalHeight = 20;
 
-    @SuppressWarnings("FieldCanBeLocal")
-    private final boolean useDarkMode = true;
+    private final boolean useDarkMode = System.getenv().containsKey("KGIJ_PBP_DARK_MODE");
 
     @SuppressWarnings("FieldCanBeLocal")
     private final Pokemon target = null;
 
     @SuppressWarnings("ConstantConditions")
-    public TestProgressBar() {
+    public ProgressBarPreview() {
         setUpMockApplication();
         updateSelectedPokemon(Optional.ofNullable(target).orElseGet(PokemonPicker::get));
+        setLookAndFeel();
         initializeFrame();
-        addShutdownHook();
     }
 
     private void setUpMockApplication() {
@@ -80,6 +80,19 @@ public class TestProgressBar {
         JBUIScale.DEBUG_USER_SCALE_FACTOR.setValue(1.0f);
     }
 
+    private void setLookAndFeel() {
+        if (useDarkMode) {
+            final DarculaLaf darkMode = new DarculaLaf();
+            try {
+                UIManager.put("label.font", Font.getFont(Font.SANS_SERIF));
+                UIManager.setLookAndFeel(darkMode);
+            } catch (Throwable e) {
+                System.out.println("unable to set look and feel");
+                e.printStackTrace();
+            }
+        }
+    }
+
     private void initializeFrame() {
         final JPanel contentPanel = createContentPanel();
         frame = new JFrame();
@@ -88,7 +101,15 @@ public class TestProgressBar {
         frame.setSize(contentPanel.getPreferredSize());
         frame.setResizable(false);
         frame.setVisible(true);
-        frame.setDefaultCloseOperation(WindowConstants.EXIT_ON_CLOSE);
+        frame.addWindowListener(new WindowAdapter() {
+            @Override
+            public void windowClosing(final WindowEvent e) {
+                printIfShiftUpdated();
+                exited = true;
+                super.windowClosing(e);
+
+            }
+        });
         frame.pack();
     }
 
@@ -194,16 +215,6 @@ public class TestProgressBar {
         return buttonPanel;
     }
 
-    private void addShutdownHook() {
-        Runtime.getRuntime().addShutdownHook(new Thread() {
-            @Override
-            public void run() {
-                printIfShiftUpdated();
-                super.run();
-            }
-        });
-    }
-
     private void updateSelectedPokemon(final Pokemon newPokemon) {
         if (selectedPokemon != null) {
             setSelectedPokemonIntField("xShift", originalXShift);
@@ -275,7 +286,18 @@ public class TestProgressBar {
             || !Objects.equals(originalHeight, selectedPokemon.getHeight());
     }
 
-    public static void main(final String[] args) {
-        SwingUtilities.invokeLater(TestProgressBar::new);
+    // deliberately not following naming convention so doesn't run automatically
+    @SuppressWarnings("NewClassNamingConvention")
+    public static class ProgressBarPreviewRunner {
+        @Test
+        public void startTestProgressBarApplication() throws InterruptedException, InvocationTargetException {
+            Assume.assumeTrue(System.getenv().containsKey("KGIJ_PBP_ENABLED"));
+            SwingUtilities.invokeAndWait(ProgressBarPreview::new);
+            while (!exited) {
+                //noinspection BusyWait
+                Thread.sleep(1000);
+            }
+        }
+
     }
 }
